--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
                             <h4>Easy to Use</h4>
-                            <p> Cost savings: While eco-friendly cars might have a higher upfront cost, they often have lower operating costs compared to traditional vehicles. Electric vehicles, for example, have lower maintenance and fuel costs, as electricity is cheaper and requires less frequent maintenance than gasoline or diesel engines.</p>
+                            <p> While eco-friendly cars might have a higher upfront cost, they often have lower operating costs compared to traditional vehicles. Electric vehicles, for example, have lower maintenance and fuel costs, as electricity is cheaper and requires less frequent maintenance than gasoline or diesel engines.</p>
                         </div>
                     </div>
                     <!--End of Icon Block-->
@@ -327,7 +327,7 @@
 
                 <div class="section-heading">
                     <h3>FEEDBACK</h3>
-                    <h2 class="section-title">What our customers are saying</h2>
+                    <h2 class="section-title">Rating </h2>
                 </div>
 
                 <!--User Testimonial-->
