--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 
                     <div class="section-heading">
                         <h3>TRUST</h3>
-                        <h2 class="section-title">Companies who use our services</h2>
+                        <h2 class="section-title">Members</h2>
                         <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                             eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
