--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
             <div class="col-38">
 
                 <div class="section-heading">
-                    <h1>MOTOSYNTHESIS</h1>
+                    <h1>MOTO
+                        SYNTHESIS</h1>
                     <h2> We are a team of highly skilled and dedicated professionals specializing in working on cars that are environmentally friendly. Our mission is to contribute towards a sustainable future by promoting the use of electric, hybrid, and other eco-friendly vehicles.
 </h2>
                 </div>
